vpc_sg_alb_asg/4_sg.tf
# Create ALb Security Group
resource "aws_security_group" "alb_security_group" {
  name        = "${var.environment}-alb Security Group"
  description = "enable http access port 80"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Outbound access"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-alb-Security Group"
  }
}

# Create Web Server Security Group
resource "aws_security_group" "web_server_security_group" {
  name        = "${var.environment}-web-server-security-group"
  description = "enable http access on port 80 via alb sg & enable ssh access on port 22"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description     = "http access"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_security_group.id]
  }

  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-web-erver-security-group"
  }
}
